test/conformance/chainsaw/generate/policy/standard/clone/sync/pol-clone-sync-modify-downstream/01-manifests.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pol-clone-sync-modify-downstream-ns
---
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  name: regcred
  namespace: pol-clone-sync-modify-downstream-ns
type: Opaque
