test/conformance/chainsaw/generate/policy/standard/clone/sync/pol-clone-sync-modify-downstream/02-policy.yaml
apiVersion: kyverno.io/v2beta1
kind: Policy
metadata:
  name: pol-clone-sync-modify-downstream-policy
  namespace: pol-clone-sync-modify-downstream-ns
spec:
  rules:
  - name: gen-zk
    match:
      any:
      - resources:
          kinds:
          - ConfigMap
    generate:
      apiVersion: v1
      kind: Secret
      name: myclonedsecret
      namespace: pol-clone-sync-modify-downstream-ns
      synchronize: true
      clone:
        namespace: pol-clone-sync-modify-downstream-ns
        name: regcred
