test/conformance/chainsaw/generate/policy/standard/clone/sync/pol-clone-sync-modify-downstream/03-trigger.yaml
apiVersion: v1
data:
  foo: bar
kind: ConfigMap
metadata:
  name: foo
  namespace: pol-clone-sync-modify-downstream-ns
