test/conformance/chainsaw/generate/policy/standard/clone/sync/pol-clone-sync-modify-downstream/chainsaw-step-01-apply-1-2.yaml
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  name: regcred
  namespace: pol-clone-sync-modify-downstream-ns
type: Opaque
