test/conformance/chainsaw/generate/policy/standard/clone/sync/pol-clone-sync-modify-downstream/chainsaw-step-02-apply-1-1.yaml
apiVersion: kyverno.io/v2beta1
kind: Policy
metadata:
  name: pol-clone-sync-modify-downstream-policy
  namespace: pol-clone-sync-modify-downstream-ns
spec:
  rules:
  - generate:
      apiVersion: v1
      clone:
        name: regcred
        namespace: pol-clone-sync-modify-downstream-ns
      kind: Secret
      name: myclonedsecret
      namespace: pol-clone-sync-modify-downstream-ns
      synchronize: true
    match:
      any:
      - resources:
          kinds:
          - ConfigMap
    name: gen-zk
