test/conformance/chainsaw/generate/policy/standard/clone/sync/pol-clone-sync-modify-downstream/chainsaw-step-01-assert-1-1.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pol-clone-sync-modify-downstream-ns
