test/conformance/chainsaw/generate/policy/standard/clone/sync/pol-clone-sync-modify-downstream/chainsaw-step-04-assert-1-1.yaml
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  name: myclonedsecret
  namespace: pol-clone-sync-modify-downstream-ns
type: Opaque
