test/conformance/chainsaw/generate/policy/standard/clone/sync/pol-clone-sync-modify-downstream/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: pol-clone-sync-modify-downstream
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - apply:
        file: permissions.yaml
    - apply:
        file: chainsaw-step-01-apply-1-1.yaml
    - apply:
        file: chainsaw-step-01-apply-1-2.yaml
    - assert:
        file: chainsaw-step-01-assert-1-1.yaml
    - assert:
        file: chainsaw-step-01-assert-1-2.yaml
  - name: create policy
    use:
      template: ../../../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../../../_step-templates/policy-ready.yaml
      with:
        bindings:
        - name: name
          value: pol-clone-sync-modify-downstream-policy
        - name: namespace
          value: pol-clone-sync-modify-downstream-ns
  - name: step-03
    try:
    - apply:
        file: chainsaw-step-03-apply-1-1.yaml
  - name: step-04
    try:
    - assert:
        file: chainsaw-step-04-assert-1-1.yaml
  - name: step-05
    try:
    - apply:
        file: chainsaw-step-05-apply-1-1.yaml
  - name: step-06
    try:
    - sleep:
        duration: 3s
  - name: step-07
    try:
    - assert:
        file: chainsaw-step-07-assert-1-1.yaml
